--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head style="background-color:pink">
+  <head>
     <link rel="stylesheet" href="style.css"/>
     <meta charset="utf-8">
-    <title>NELIN</title>
+    <title>Tutorial</title>
 
   </head>
 
-  <body style="background-color:pink">
-    <nav style="background-color:pink">
-      <div style="background-color:pink" class="wrapper">
-        <ul style="background-color:pink">
-          <li style="background-color:pink"><a href="bitch.html">a PAGE</a></li>
+  <body>
+    <nav>
+      <div class="wrapper">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="about.html">About me</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
     </nav>
-    <div style="background-color:pink" class="wrapper">
-      <h1 style="background-color:yellow" title="Welcome message for bitches!">HI BITCH!!!!!!!</h1>
+    <div class="wrapper">
+      <h1 title="This is front page">Front page</h1>
     <!--  <img class="img-sun"src="img/index.jpeg" alt="sunflower">-->
-    <div style="background-color:pink"class="img-welcome"></div>
+    <div class="img-sun"></div>
     </div>
   </body>
 </html>
