--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head style="background-color:pink">
     <link rel="stylesheet" href="style.css"/>
     <meta charset="utf-8">
-    <title>Tutorial</title>
+    <title>NELIN</title>
 
   </head>
 
-  <body>
-    <nav>
-      <div class="wrapper">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="about.html">About me</a></li>
-          <li><a href="contact.html">Contact</a></li>
+  <body style="background-color:pink">
+    <nav style="background-color:pink">
+      <div style="background-color:pink" class="wrapper">
+        <ul style="background-color:pink">
+          <li style="background-color:pink"><a href="bitch.html">a PAGE</a></li>
         </ul>
       </div>
     </nav>
-    <div class="wrapper">
-      <h1 title="This is front page">Front page</h1>
+    <div style="background-color:pink" class="wrapper">
+      <h1 style="background-color:yellow" title="Welcome message for bitches!">HI BITCHES!!!!!!!</h1>
+    <div class="vidwrap">
+      <video src="dog.mp4" autoplay controls loop title="Let me doiiiit for you!">
+      </video>
+    </div>
     <!--  <img class="img-sun"src="img/index.jpeg" alt="sunflower">-->
-    <div class="img-sun"></div>
+    <div style="background-color:pink"class="img-welcome"></div>
     </div>
   </body>
 </html>
